added catalog and product detail, removed chatGPT code

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,27 @@
 venv
+WebShop/__pycache__/wsgi.cpython-313.pyc
+WebShop/__pycache__/urls.cpython-313.pyc
+WebShop/__pycache__/settings.cpython-313.pyc
+WebShop/__pycache__/__init__.cpython-313.pyc
+userprofile/migrations/__pycache__/__init__.cpython-313.pyc
+userprofile/migrations/__pycache__/0001_initial.cpython-313.pyc
+userprofile/__pycache__/models.cpython-313.pyc
+userprofile/__pycache__/apps.cpython-313.pyc
+userprofile/__pycache__/admin.cpython-313.pyc
+userprofile/__pycache__/__init__.cpython-313.pyc
+storeitems/migrations/__pycache__/__init__.cpython-313.pyc
+storeitems/migrations/__pycache__/0002_alter_category_options_product.cpython-313.pyc
+storeitems/migrations/__pycache__/0001_initial.cpython-313.pyc
+storeitems/__pycache__/views.cpython-313.pyc
+storeitems/__pycache__/urls.cpython-313.pyc
+storeitems/__pycache__/serializers.cpython-313.pyc
+storeitems/__pycache__/models.cpython-313.pyc
+storeitems/__pycache__/apps.cpython-313.pyc
+storeitems/__pycache__/admin.cpython-313.pyc
+storeitems/__pycache__/__init__.cpython-313.pyc
+store/migrations/__pycache__/__init__.cpython-313.pyc
+store/__pycache__/views.cpython-313.pyc
+store/__pycache__/models.cpython-313.pyc
+store/__pycache__/apps.cpython-313.pyc
+store/__pycache__/admin.cpython-313.pyc
+store/__pycache__/__init__.cpython-313.pyc
